; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_sdio_slave.c_recv_start.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_sdio_slave.c_recv_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__, %struct.TYPE_6__, %struct.TYPE_5__ }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i32, i64 }
%struct.TYPE_5__ = type { i32 }

@SLC = common dso_local global %struct.TYPE_8__ zeroinitializer, align 8
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"recv: restart without desc\00", align 1
@ESP_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @recv_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @recv_start() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @SLC, i32 0, i32 2, i32 0), align 8
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @SLC, i32 0, i32 2, i32 0), align 8
  %3 = call i32 (...) @critical_enter_recv()
  %4 = call i32* (...) @recv_get_first_empty_buf()
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %12, label %7

7:                                                ; preds = %0
  %8 = load i32, i32* @TAG, align 4
  %9 = call i32 @ESP_LOGD(i32 %8, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %10 = call i32 (...) @critical_exit_recv()
  %11 = load i32, i32* @ESP_OK, align 4
  store i32 %11, i32* %1, align 4
  br label %17

12:                                               ; preds = %0
  %13 = load i32*, i32** %2, align 8
  %14 = ptrtoint i32* %13 to i64
  store i64 %14, i64* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @SLC, i32 0, i32 1, i32 1), align 8
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @SLC, i32 0, i32 1, i32 0), align 8
  %15 = call i32 (...) @critical_exit_recv()
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @SLC, i32 0, i32 0, i32 0), align 8
  %16 = load i32, i32* @ESP_OK, align 4
  store i32 %16, i32* %1, align 4
  br label %17

17:                                               ; preds = %12, %7
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}

declare dso_local i32 @critical_enter_recv(...) #1

declare dso_local i32* @recv_get_first_empty_buf(...) #1

declare dso_local i32 @ESP_LOGD(i32, i8*) #1

declare dso_local i32 @critical_exit_recv(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
